--- a/BernalService/packages.config
+++ b/BernalService/packages.config
@@ -3,5 +3,6 @@
   <package id="Mono.Zeroconf" version="0.9.0.0" targetFramework="net45" />
   <package id="Nancy" version="0.17.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Self" version="0.17.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="ZeroconfService" version="0.6.0.0" targetFramework="net45" />
 </packages>
